--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "classnames": "2.2.6",
+    "hooks.macro": "1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
