--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/classnames": "2.2.8",
-    "@types/jest": "24.0.13",
-    "@types/node": "12.0.7",
-    "@types/react": "16.8.19",
-    "@types/react-dom": "16.8.4",
     "classnames": "2.2.6",
     "hooks.macro": "1.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "typescript": "3.5.1"
+    "ramda": "0.26.1",
+    "react": "16.10.2",
+    "react-dom": "16.10.2",
+    "reselect": "4.0.0"
+  },
+  "devDependencies": {
+    "@types/classnames": "2.2.9",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.11",
+    "@types/ramda": "0.26.26",
+    "@types/react": "16.9.5",
+    "@types/react-dom": "16.9.1",
+    "node-sass": "4.12.0",
+    "react-scripts": "3.2.0",
+    "typescript": "3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node-sass": "4.12.0"
   }
 }
