--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "10.0.21",
     "classnames": "2.2.6",
     "hooks.macro": "1.0.1",
     "ramda": "0.26.1",
@@ -17,7 +18,6 @@
     "@types/ramda": "0.26.26",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
-    "node-sass": "4.12.0",
     "react-scripts": "3.2.0",
     "typescript": "3.6.3"
   },
