--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@emotion/core": "10.0.21",
     "@emotion/styled": "10.0.17",
     "hooks.macro": "1.0.1",
+    "lodash-es": "4.17.15",
     "react": "16.10.2",
     "react-dom": "16.10.2",
     "reselect": "4.0.0"
   },
   "devDependencies": {
     "@types/jest": "24.0.18",
+    "@types/lodash-es": "4.17.3",
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
