--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "10.0.22",
-    "@emotion/styled": "10.0.22",
+    "@emotion/styled": "10.0.23",
     "hooks.macro": "1.0.1",
     "lodash-es": "4.17.15",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
+    "react": "0.0.0-experimental-f6b8d31a7",
+    "react-dom": "0.0.0-experimental-f6b8d31a7",
     "reselect": "4.0.0"
   },
   "devDependencies": {
-    "@types/jest": "24.0.20",
+    "@types/jest": "24.0.21",
     "@types/lodash-es": "4.17.3",
-    "@types/node": "12.11.7",
+    "@types/node": "12.12.5",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "react-scripts": "3.2.0",
