--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "types": [
+      "react/experimental",
+      "react-dom/experimental"
+    ]
   },
   "include": [
     "src"
